crates/compiler/cypress/tests/snapshots/test_parse__neg_inf_float_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "-inf\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (* Ident=>LowerIdent@1 EndUnaryMinus)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
UnaryOp(Minus, Ident("inf"))

[=== formatted below ===]

