crates/compiler/cypress/tests/snapshots/test_parse__negate_multiline_string_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "-\"\"\"\"\"\"\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (* String=>String@1 EndUnaryMinus)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
UnaryOp(Minus, String("\"\"\"\"\"\""))

[=== formatted below ===]

