crates/compiler/cypress/tests/snapshots/test_parse__negate_multiline_string_expr_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "-(\n    \"\"\"\n    \"\"\")\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (* (BeginParens String=>String@2 EndParens) EndUnaryMinus)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
UnaryOp(Minus, String("\"\"\"\n    \"\"\""))

[=== formatted below ===]

