crates/compiler/cypress/tests/snapshots/test_parse__negative_in_apply_def_expr_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "a = A\n    -g\n    a\na\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssignDecl
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            (*
                UpperIdent=>UpperIdent@2
                InlineApply=>UpperIdent@2
                (* Ident=>LowerIdent@4 EndUnaryMinus)
                InlineApply=>LowerIdent@4
                Ident=>LowerIdent@5
            EndApply)
        EndAssignDecl)
        HintExpr
        Ident=>LowerIdent@6
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Ident("a"), Apply(UpperIdent("A"), [UnaryOp(Minus, Ident("g")), Ident("a")]))
Ident("a")

[=== formatted below ===]

